--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,13 @@ repositories {
 
 dependencies {
 
-    androidTestImplementation 'androidx.test:rules:1.4.0-alpha05'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0-alpha05'
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha01'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha01'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.3.0'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
@@ -66,12 +66,14 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.http-client/google-http-client
     implementation group: 'com.google.http-client', name: 'google-http-client', version: '1.39.1'
 
-    implementation 'androidx.fragment:fragment-ktx:1.3.1'
+//    implementation 'androidx.fragment:fragment-ktx:1.3.6'
     implementation 'com.squareup.picasso:picasso:2.71828'
     //noinspection GradleCompatible
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-v4:24.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-fragment:28.0.0'
     implementation "androidx.preference:preference-ktx:1.1.1"
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
